# AIAgents-WorkflowsThePracticalGuideCourse

./: .gitignore  README.md  main.py  main_agents.py  main_download_as_md.py  main_multi_agent.py  main_open_ai.py  post-examples.json  pyproject.toml
research_crew/: pyproject.toml
research_crew/src/research_crew/: crew.py
